// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`StackComponent should render the template horizontal with 2xl gap 1`] = `
<div
  id="root6"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-2xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template horizontal with lg gap 1`] = `
<div
  id="root4"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-lg"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template horizontal with md gap 1`] = `
<div
  id="root3"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-md"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template horizontal with no gap 1`] = `
<div
  id="root0"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-none"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template horizontal with sm gap 1`] = `
<div
  id="root2"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-sm"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template horizontal with xl gap 1`] = `
<div
  id="root5"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template horizontal with xs gap 1`] = `
<div
  id="root1"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack horizontal gap-xs"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with 2xl gap 1`] = `
<div
  id="root13"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-2xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with lg gap 1`] = `
<div
  id="root11"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-lg"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with md gap 1`] = `
<div
  id="root10"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-md"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with no gap 1`] = `
<div
  id="root7"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-none"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with sm gap 1`] = `
<div
  id="root9"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-sm"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with xl gap 1`] = `
<div
  id="root12"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-xl"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;

exports[`StackComponent should render the template vertical with xs gap 1`] = `
<div
  id="root8"
  ng-version="20.1.7"
>
  <app-stack>
    <div
      class="stack vertical gap-xs"
    >
      <h2>
        Should be projected
      </h2>
      <p>
        Should be projected
      </p>
    </div>
  </app-stack>
</div>
`;
